ChangeLog: 1. fixed bugs.